Use txtx in readme

--- a/README.mdx
+++ b/README.mdx
@@ -3,6 +3,4 @@ A simple script to generate READMEs and other text files by embedding shell and 
 
 ### Usage
 
-Please provide a file.
-
-usage: python3 ./txtx.py <template-file>
+!{./txtx.py 2>/dev/stdout; true}
