--- a/README.mdx
+++ b/README.mdx
@@ -1,8 +1,54 @@
 # txtx
 A simple script to generate READMEs and other text files by embedding shell and other scripts.
 
-### Usage
-Simply run the `txtx.py` script with the file you want to generate as the first argument. The script will execute the file and emmit the result to stdout.
+### Example Use Case
+Say you want to show the file structure of your project in your README. Instead of manually writing out the structure, or running a command like `tree` and copying in the output, we can simply *embed* the `tree` command into the with the following syntax:
 ```
-!{./txtx.py 2>/dev/stdout; true}
+!!{tree}
+```
+
+When compiling your README, the `tree` command will be executed and the output will be inserted in place of the `!!{tree}` command, resulting in the following.
+
+```
+!{tree}
+```
+
+This has the benefit of keeping your README up to date with your project structure, without having to manually update it.
+
+This is just one use case, but your could also use it to include a file with the `cat` command, run a script to generate a table of contents, or embed do documentation extracted from doc-comments in your code. You could even download content from the web to be embedded.
+
+You can also use the following syntax to embed another language like python into your text file.
+!!(python){
+print("Hello from python!")
+}
+
+Or use it to execute multiple commands and embed the output.
+!!(bash){
+echo "Hello from bash!"
+echo "This computer is called $(hostname)"
+echo "The current time is $(date)"
+echo "Goodbye!"
+}
+
+### Setup
+txtx is designed to be easy to setup. You can simply copy the `txtx.py` script into your project and start using it. It is now yours! Do whatever you want with it. It does not require any external dependencies.
+
+#### Nix
+If you are using Nix, you can use the provided flake to add `txtx` to your project. Simply add the following to your `flake.nix` file.
+```nix
+!{cat ./examples/simple-flake/flake.nix}
+```
+
+### Running a Template
+Simply run the `txtx.py` script with the file you want to generate as the first argument. The script will execute the file and emit the result to stdout.
+
+```bash
+python3 txtx.py input-file.txtx > README.txt
+```
+
+### Configuration
+You can configure the txtx syntax using the cli arguments. Run `txtx.py --help` to see the available options.
+
+```
+!{./txtx.py 2>&1 --help}
 ```
