--- a/examples/python.mdx
+++ b/examples/python.mdx
@@ -1,7 +1,7 @@
 # Random Ascii Art
 This note contains a random ascii creation downloaded from the github repo [devtooligan/awesome-ascii-art](https://github.com/devtooligan/awesome-ascii-art).
 
-![python3]{
+!(python3){
 
 import random
 import requests
